# ChangeLog for dev-perl/locale-maketext-lexicon
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/locale-maketext-lexicon/ChangeLog,v 1.38 2007/03/05 12:49:45 ticho Exp $

  05 Mar 2007; Andrej Kacian <ticho@gentoo.org>
  locale-maketext-lexicon-0.62.ebuild:
  Stable on x86, bug #169152.

  23 Oct 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  locale-maketext-lexicon-0.62.ebuild:
  Stable on hppa

  20 Oct 2006; Aron Griffis <agriffis@gentoo.org>
  locale-maketext-lexicon-0.62.ebuild:
  Mark 0.62 stable on ia64

  20 Oct 2006; Bryan Østergaard <kloeri@gentoo.org>
  locale-maketext-lexicon-0.62.ebuild:
  Stable on Alpha.

  20 Oct 2006; Michael Cummings <mcummings@gentoo.org>
  locale-maketext-lexicon-0.46.ebuild, locale-maketext-lexicon-0.53.ebuild,
  locale-maketext-lexicon-0.61.ebuild, locale-maketext-lexicon-0.62.ebuild:
  Marking amd64, sparc stable

  06 Aug 2006; Michael Cummings <mcummings@gentoo.org>
  locale-maketext-lexicon-0.46.ebuild, locale-maketext-lexicon-0.53.ebuild,
  locale-maketext-lexicon-0.61.ebuild, locale-maketext-lexicon-0.62.ebuild:
  Adding perl dep; fixed DEPEND

  10 Jul 2006; Aron Griffis <agriffis@gentoo.org>
  locale-maketext-lexicon-0.61.ebuild:
  Mark 0.61 stable on ia64

  10 Jul 2006; Christian Hartmann <ian@gentoo.org>
  -locale-maketext-lexicon-0.35.ebuild:
  Cleanup

  05 Jul 2006; Christian Hartmann <ian@gentoo.org>
  locale-maketext-lexicon-0.35.ebuild, locale-maketext-lexicon-0.46.ebuild,
  locale-maketext-lexicon-0.53.ebuild, locale-maketext-lexicon-0.61.ebuild,
  locale-maketext-lexicon-0.62.ebuild:
  Fixed RDEPEND wrt bug #134781

  03 Jul 2006; Michael Cummings <mcummings@gentoo.org>
  locale-maketext-lexicon-0.53.ebuild, locale-maketext-lexicon-0.61.ebuild:
  Marking amd64 stable

  29 Jun 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  locale-maketext-lexicon-0.61.ebuild:
  Stable on hppa

*locale-maketext-lexicon-0.62 (23 Jun 2006)
