@@ -1,0 +1,3 @@
+MD5 ce0fc6dfbf41fc4a72d1431e9551a634 Locale-Maketext-Lexicon-0.64.tar.gz 84998
+RMD160 bbd0e9c5a1cc13ea2d505037927c194418122b9c Locale-Maketext-Lexicon-0.64.tar.gz 84998
+SHA256 019b7bca2f744cbb7ba58e3fe93f67898b1eb27f1bd5ea5fa902082a2aa5af75 Locale-Maketext-Lexicon-0.64.tar.gz 84998
