@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/locale-maketext-lexicon
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/locale-maketext-lexicon/ChangeLog,v 1.38 2007/03/05 12:49:45 ticho Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/locale-maketext-lexicon/ChangeLog,v 1.39 2007/06/12 19:00:06 mcummings Exp $
+
+*locale-maketext-lexicon-0.64 (12 Jun 2007)
+
+  12 Jun 2007; Michael Cummings <mcummings@gentoo.org>
+  +locale-maketext-lexicon-0.64.ebuild:
+  Version bump
 
   05 Mar 2007; Andrej Kacian <ticho@gentoo.org>
   locale-maketext-lexicon-0.62.ebuild:
